update controllers to return RequestEntity